distinguish between mp4, m4a, m4v types in Amarok::FileType

iPod Collection (the new one) needs to distinguish somehow between
MPEG-4 audio and video files; to make this generic, least bad approach
it probably to use Meta::Track:type().

MetaFile::Track's type() is okay, as it just returns lowercased file
extension. SqlTrack stores file type in db as numeric index to the
Amarok::FileType enum, which currently has just one generic entry for
MP4 files.

This patch extends Amarok::FileType with M4a and M4v values and
TagHelper to try to detect more specific MP4 file format. (currently
just file extension based, can be extended in future) Users will need
to do a full rescan for Local Collection to pick up more specialised
file types.

I'm running this through review board as there seems no general
agreement on Meta::Track:type() semantics. (Speaking of which, I'd be
most satisfied if it returned (the most specific) mime-type represented
using dedicated class that would support mimetype hierarchy)

BUG: 268238
FIXED-IN: 2.6
REVIEW: 104481