shared/FileType.h
@@ -32,13 +32,15 @@ enum FileType
     Mp3         =  1,
     Ogg         =  2,
     Flac        =  3,
-    Mp4         =  4,
+    Mp4         =  4, // a file in MPEG-4 container that may or may not contain video
     Wma         =  5,
     Aiff        =  6,
     Mpc         =  7,
     TrueAudio   =  8,
     Wav         =  9,
-    WavPack     = 10
+    WavPack     = 10,
+    M4a         = 11, // a file in MPEG-4 container that contains only audio
+    M4v         = 12  // a file in MPEG-4 container that for sure contains video
 };
 
 
